--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,13 @@
+0.5.0
+- 2025-07-26 support BJData Spec Draft 3 (PR #5, thanks to Nebojsa Cvetkovic)
+- 2025-07-27 compatible with numpy 2.x, fully reformat C and python code with formatter
+
+0.4.1
+- 2023-10-25 fix numpy 1d array length encoding bug, fix #4
+
+0.4.0
+- 2022-09-04 add numpy ndarray/scalar encoding/decoding, fix pip ext compilation error, thanks to @termanis
+
 0.3.0
 - 2022-04-01 support BJData Spec Draft 2, change to little-endian for numbers
 
